lab3/exercise02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: flask-app
        image: flask-login-app
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
