lab3/exercise02/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
        - name: db-init-script
          mountPath: /docker-entrypoint-initdb.d/  # PostgreSQL runs .sql files from here on startup
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
      - name: db-init-script
        configMap:
          name: db-init-config
